--- a/.stylelintrc
+++ b/.stylelintrc
@@ -144,7 +144,7 @@
 
     "custom-media-pattern": null,
 
-    "media-query-parentheses-space-inside": "never",
+    "media-feature-parentheses-space-inside": "never",
     "media-query-list-comma-newline-after": "always-multi-line",
     "media-query-list-comma-newline-before": "never-multi-line",
     "media-query-list-comma-space-after": "always-single-line",
@@ -181,7 +181,7 @@
     "no-extra-semicolons": true,
     "no-indistinguishable-colors": null,
     "no-invalid-double-slash-comments": true,
-    "no-missing-eof-newline": true,
+    "no-missing-end-of-source-newline": true,
     "no-unknown-animations": null,
     "no-unsupported-browser-features": null
   }
